--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "index.js",
   "version": "1.0.0",
   "dependencies": {
+    "express": "^4.18.2",
     "fs-extra": "^11.2.0",
     "puppeteer": "^21.6.1",
     "sqlite3": "^5.1.6"
