--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "express": "^4.18.2",
     "fs-extra": "^11.2.0",
     "puppeteer": "^21.6.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sqlite3": "^5.1.6"
   },
   "type": "commonjs"
